# Rcomponents

./: .Rbuildignore  .Renviron  .Rprofile  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
R/: Rcomponents.R  compileFunctions.R  evalComponents.R  evalMsgId.R  listComponentFiles.R  logMsg.R  privateEval.R  publicEval.R  setAutocomplection.R  updateComponentMeta.R
makefiles/: Linux.mk
man/: compileFunctions.Rd  evalComponents.Rd  evalMsgId.Rd  extractStrings.Rd  listComponentFiles.Rd  logMsg.Rd  msgHandler.Rd  privateEval.Rd  publicEval.Rd  setAutocompletion.Rd  updateComponentMeta.Rd
src/: Makevars  compressor.cpp  compressor.h  decompressor.cpp
